# aws-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: test.yml
src/aws_utils/: s3.py
tests/: test_s3.py
