[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "aws-utils"
version = "1.0.0"
description = "A collection of utilities for working with the AWS boto3 client"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"

dependencies = [
  "boto3",
]

[project.optional-dependencies]
test = [
  "pytest<8.4",
  "pytest-mock<4",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"
